0.10:
- Fix a really nasty bug with mixings up requests after encountering a
  timeout. See
  http://lists.unbit.it/pipermail/uwsgi/2013-December/006802.html for
  details.
- Remove spurious requirenment on perl v5.14.2
- First stab at https://github.com/gugod/Hijk/issues/3 we'll now
  return an error key in the response with
  Hijk::Error::{CONNECT_TIMEOUT,READ_TIMEOUT} instead of dying.
- Nuked the Hijk::HTTP::XS support from the repo, we've decided it was
  too complex for its own good.

0.09: # 2013-12-13T07:38:25+0100
- KEEP CALM AND REMOVE FETCH OPTION
- Hijk::request will use XS parser only if Hijk::HTTP::XS is loaded

0.08: # 2013-12-12T20:10:00+0100
- We only checked for undefined return codes from POSIX::read(), not
  0, resulting in an infinite select/read loop when a server with
  keep-alive enabled cut off our connection.

0.07: # 2013-12-09T12:50:00+0100
- Skip the live connect timeout test by default, it will fail making
  live connections on various firewalled/locked down hosts.

0.06: # 2013-12-09T12:20:00+0100
- Declare missing test dependency on Test::Exception
- Declare test dependency on Net::Ping 2.41
- Various POD improvements describing more limitations in the API and
  providing examples.
- Don't unconditionally load the yet-to-be-released Hijk::HTTP::XS
  module, instead provide a "fetch" option.
- Shutdown and delete the cached connection in case of read error.
- Handle syswrite() returning undef without spewing an uninitialized
  comparison error
- Various work on the test suite.

0.05: # 2013-12-04T22:33:31+0100
- Properly invalidate connection cache when seeing 'Connection: close' in the response.

0.04: # 2013-12-04T00:06:16+0100
- Implement 'connect timeout' and 'read timeout'

0.02: # 2013-11-24T16:14:20+0100
- Passthrug extra HTTP header with the 'head' request arg.

0.01: # 2013-11-24T01:49:08+0100
- Initial Release, with all wanted features are implemented.
