@@ -1,4 +1,7 @@
 0.10:
+- We can now talk HTTP/1.0 an addition to HTTP/1.1, have a way to
+  disable the socket cache, and can specify connect and read timeouts
+  independently.
 - Fix a really nasty bug with mixings up requests after encountering a
   timeout. See
   http://lists.unbit.it/pipermail/uwsgi/2013-December/006802.html for
